# claude-code-hooks-daemon

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  =5.9  BUG_FIX_STOP_EVENT_SCHEMA.md  BUG_REPORTING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_ANALYSIS_SILENT_FAILURES.md  LICENSE  README.md  coverage.json  daemon.sh  init.sh  install.py  install.sh  pyproject.toml  test_forwarder_control_chars.sh  test_forwarders.sh  test_forwarders_structure.sh  test_qa_manual.sh
.claude/: .gitignore  HOOKS-DAEMON.md  hooks-daemon.yaml  hooks-daemon.yaml.example  init.sh  settings.json  settings.local.json
.claude/agents/: acceptance-test-runner.md  code-reviewer.md  python-developer.md  qa-fixer.md  qa-runner.md  release-agent.md  transcript-inspector.md
.claude/ccy/: Dockerfile
.claude/commands/: hooks-daemon-update.md
.claude/hooks/: status-line
.claude/hooks/handlers/: README.md  __init__.py
.claude/project-handlers/pre_tool_use/: enforce_llm_qa.py  test_enforce_llm_qa.py
.claude/project-handlers/stop/: release_blocker.py  test_release_blocker.py  test_release_blocker_integration.py
.claude/skills/: CLAUDE.md
.claude/skills/acceptance-test/: SKILL.md  invoke.sh
.claude/skills/configure/: SKILL.md  invoke.sh
.claude/skills/mode/: SKILL.md  invoke.sh
.claude/skills/optimise/: SKILL.md  invoke.sh
.claude/skills/release/: SKILL.md  invoke.sh  skill.md
CLAUDE/: AGENT_TEAM_EXECUTION_STATUS.md  ARCHITECTURE.md  AgentTeam.md  CLAUDE.md  DEBUGGING_HOOKS.md  DEBUGGING_STOP_HOOK.md  DEBUGGING_TRANSCRIPTS.md  HANDLER_DEVELOPMENT.md  HANDLER_GROUPING_AND_EXPANSION.md  LLM-INSTALL.md  LLM-UPDATE.md  PROJECT_HANDLERS.md  PlanWorkflow.md  QA.md  SELF_INSTALL.md  TDD_RESPONSE_VALIDATION_SUMMARY.md  Worktree.md
CLAUDE/AcceptanceTests/: GENERATING.md  PLAYBOOK-v1-manual-archived.md  PLAYBOOK.md
CLAUDE/AcceptanceTests/test-scenarios/: 01-safety-blockers.sh  02-qa-enforcement.sh  03-workflow-handlers.sh  04-advisory-handlers.sh
CLAUDE/Architecture/: StatusLine.md
CLAUDE/Code/: HooksSystem.md
CLAUDE/CodeLifecycle/: Bugs.md  Features.md  General.md  README.md
CLAUDE/Plan/: CLAUDE.md  README.md  idempotent-chasing-wadler.md
CLAUDE/UPGRADES/: README.md
CLAUDE/development/: CLAUDE.md  QA.md  RELEASING.md
RELEASES/: README.md  v2.10.0.md  v2.10.1.md  v2.11.0.md  v2.12.0.md  v2.13.0.md  v2.14.0.md  v2.15.0.md  v2.15.1.md  v2.15.2.md  v2.16.0.md  v2.16.1.md  v2.17.0.md  v2.17.1.md  v2.17.2.md  v2.17.3.md  v2.18.0.md  v2.19.0.md  v2.2.0.md  v2.2.1.md  v2.20.0.md  v2.21.0.md  v2.21.1.md  v2.22.0.md  v2.23.0.md  v2.23.1.md  v2.23.2.md  v2.23.3.md  v2.24.0.md  v2.25.0.md  v2.26.0.md  v2.27.0.md  v2.28.0.md  v2.29.0.md  v2.29.1.md  v2.29.2.md  v2.3.0.md  v2.30.0.md  v2.31.0.md  v2.31.1.md  (+23 more)
docs/: CLAUDE.md  CONFIG-VALIDATION.md  DAEMON.md  PLAN_SYSTEM.md  PLAN_WORKFLOW.md  QA-INFRASTRUCTURE.md  QA-RUNNER-SETUP.md  WORKFLOWS.md
docs/guides/: CONFIGURATION.md  GETTING_STARTED.md  HANDLER_REFERENCE.md  TROUBLESHOOTING.md
examples/basic_setup/: hooks-daemon.yaml
examples/project-handlers/: README.md
examples/tests/: test_branch_naming_enforcer.py  test_build_asset_watcher.py  test_vendor_changes_reminder.py
hooks/: notification  permission-request  post-tool-use  pre-compact  pre-tool-use  session-end  session-start  stop  subagent-stop  user-prompt-submit
scripts/: audit_handler_config_keys.py  benchmark_validation.py  debug_hooks.sh  debug_info.py  detect_location.sh  handler_status.py  health_check.sh  install_version.sh  run-qa-runner.sh  setup_worktree.sh  test.bash  upgrade.sh  upgrade_version.sh  validate_worktrees.sh  venv-include.bash
scripts/install/: README.md  config_diff_analyzer.sh  config_preserve.sh  daemon_control.sh  gitignore.sh  hooks_deploy.sh  mode_guard.sh  output.sh  prerequisites.sh  project_detection.sh  python_fingerprint.sh  rollback.sh  slash_commands.sh  test_gitignore_manual.sh  test_helpers.sh  test_output_manual.sh  test_prerequisites_manual.sh  test_slash_commands_manual.sh  test_validation_manual.sh  test_venv_manual.sh  validation.sh  venv.sh  venv_resolver.sh
scripts/qa/: audit_error_hiding.py  check_magic_values.py  check_skill_references.py  error_hiding_exclusions.json  llm_qa.py  run_all.sh  run_autofix.sh  run_dependency_check.sh  run_format_check.sh  run_lint.sh  run_security_check.sh  run_shell_check.sh  run_smoke_test.sh  run_strategy_pattern_check.sh  run_tests.sh  run_type_check.sh
src/: CLAUDE.md
src/claude_code_hooks_daemon/: __init__.py  version.py
src/tests/: test_acceptance_test.py
tests/: CLAUDE.md  __init__.py  conftest.py
tests/config/: test_models.py  test_validator.py
tests/daemon/: test_config.py  test_init_config.py  test_log_level_override.py  test_log_marker.py  test_paths.py  test_server.py  test_server_response_schema.py  test_server_validation.py
tests/fixtures/: invalid_config.yaml  invalid_logging_level.yaml  invalid_syntax.yaml  invalid_version_format.yaml  minimal_config.yaml  sample_config.yaml  security_test.py  valid_config.json  valid_config.yaml
tests/handlers/: test_registry_config.py
tests/integration/: __init__.py  conftest.py  test_all_handlers_response_validation.py  test_auto_continue_stop_daemon_flow.py  test_config_integration.py  test_config_migrations_integration.py  test_daemon_smoke.py  test_dogfooding_config.py  test_dogfooding_hook_scripts.py  test_ensure_venv.py  test_entry_point.py  test_entry_points_branch_coverage.py  test_example_config.py  test_fingerprint_parity.py  test_handler_config_blocking.py  test_handler_instantiation.py  test_init_sh_venv_resolution.py  test_install_venv_resolver.py  test_pipe_blocker_integration.py  test_plugin_daemon_integration.py  test_plugin_integration.py  test_settings_hook_paths.py  test_skill_scripts_venv_resolution.py  test_venv_include_resolution.py
tests/unit/: __init__.py  test_ci_passthrough.py  test_config_loader.py  test_config_schema.py  test_hello_world_config.py  test_hello_world_integration.py  test_hooks_pre_tool_use.py  test_install.py  test_plugin_loader.py  test_qa_runner.py  test_version.py
(+949 files in other folders)
