[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-hooks-daemon"
version = "2.13.0"
description = "High-performance daemon for Claude Code hooks using front controller architecture"
readme = "README.md"
authors = [
    {name = "Edmonds Commerce", email = "hello@edmondscommerce.co.uk"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
keywords = ["claude-code", "hooks", "ai", "llm", "development-tools"]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "jsonschema>=4.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.11",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "bandit>=1.7",
    "safety>=2.3",
    "build>=1.0",
    "twine>=4.0",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.0",
    "deptry>=0.20",
]

[project.scripts]
claude-hooks-daemon = "claude_code_hooks_daemon.hooks.pre_tool_use:main"

[project.urls]
Homepage = "https://github.com/Edmonds-Commerce-Limited/claude-code-hooks-daemon"
Documentation = "https://github.com/Edmonds-Commerce-Limited/claude-code-hooks-daemon/blob/main/README.md"
Repository = "https://github.com/Edmonds-Commerce-Limited/claude-code-hooks-daemon"
Issues = "https://github.com/Edmonds-Commerce-Limited/claude-code-hooks-daemon/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/claude_code_hooks_daemon",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=json:untracked/qa/coverage.json",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "anyio: marks tests as anyio async tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
# Disabled parallel mode - causes fork bomb when running pytest with --cov
# parallel = true
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 95.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | __pycache__
  | dist
  | build
  | tests/fixtures/project_handlers_error_cases
)
| tests/fixtures/plugins/syntax_error_handler\.py
'''

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["tests/fixtures/plugins/syntax_error_handler.py", "tests/fixtures/project_handlers_error_cases/**/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "SIM102",  # nested if statements (readability preference)
    "SIM103",  # return negated condition (readability preference)
    "SIM112",  # env variable capitalization (false positive - 'container' is lowercase by design)
    "SIM117",  # nested with statements (readability preference)
    "ARG002",  # unused method arguments (valid for interface compliance)
    "TC001",  # type-checking imports (causes circular import issues)
    "PTH123",  # open() vs Path.open() (open() is fine for /dev/null and simple cases)
    "E402",  # module import not at top (false positive from sys.path manipulation)
    "RUF043",  # pytest match patterns (false positive - pytest handles regex escaping)
    "B007",  # unused loop control variables in tests (tests often need all values for clarity)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG", "S101", "SIM"]  # Allow unused arguments, asserts, and simplify rules in tests

[tool.ruff.lint.isort]
known-first-party = ["claude_code_hooks_daemon"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_equality = true
strict_optional = true
enable_error_code = ["truthy-bool", "redundant-expr", "unused-awaitable"]
exclude = [
    'tests/fixtures/plugins/syntax_error_handler\.py$',
    'tests/fixtures/project_handlers_error_cases/.*\.py$',
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", "build", "dist"]
skips = [
    "B101",  # Allow asserts (used in type checking)
    "B324",  # MD5 hash usage - used for non-security cache keys only
    "B602",  # subprocess with shell=True - internal QA runner only, trusted commands
    "B404",  # subprocess module import - legitimate use in handlers
    "B603",  # subprocess without shell - we use both patterns appropriately
    "B607",  # Starting process with partial path - intentional for tool execution
    "B108",  # Temp file/directory usage - standard library patterns, safe usage
]

[tool.deptry]
# Exclude non-source directories (regex patterns)
exclude = [
    "tests/.*",
    "scripts/.*",
    "CLAUDE/.*",
    "untracked/.*",
    "\\.claude/.*",
    "\\.venv/.*",
]
# DEP002: dev tools (CLI-only, not imported in code) - false positives
# DEP003: self-package imports (claude_code_hooks_daemon imports itself) - false positives
ignore = ["DEP002", "DEP003"]
